# LAN_Chat

./: README.md
LanChat/: CMakeLists.txt  chatwindow.cpp  chatwindow.h  chatwindow.ui  client.cpp  client.h  connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  main.cpp  protocol.h  resources.qrc  server.cpp  server.h  serverwindow.cpp  serverwindow.h
